--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
               <input type="text"  class="form-control" id="nome-newsletter" placeholder="Nome">
             </div>
             <div class="form-group col-md-3 ">
-              <input type="password" class="form-control" id="email-newsletter" placeholder="Email">
+              <input type="email" class="form-control" id="email-newsletter" placeholder="Email">
             </div>
             <div class="form-group">
               <button type="button" class="btn btn-custom ">
